--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ body{
     line-height: 1.6;
 }
 
+body.modal-open {
+    overflow: hidden;
+}
+
 button, .btn{
     cursor: pointer;
     border: none;
@@ -230,6 +234,40 @@ h1, h2, h3{
     background-color: #000;
 }
 
+
+.lightbox {
+    display: none; /* ← important */
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9); /* dark filter */
+    justify-content: center;
+    align-items: center;
+}
+
+.lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
+    background-color: transparent; /* <– fixes white box around transparent images */
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+.close-btn {
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    font-size: 40px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1000;
+}
+
 /* Media Queries */
 @media(min-width: 576px){
     .title h2{
@@ -285,4 +323,10 @@ h1, h2, h3{
     .portfolio-grid > div:nth-child(6){
         grid-column: 1/3;
     }
+
+
+
+
+
+
 }
